@@ -265,3 +265,14 @@ div.footer {
 .nw {
 	white-space: nowrap;
 }
+
+.unspent_minus {
+	color:red;
+	font-style:italic;
+	font-size:80%;
+}
+.unspent_plus {
+	color:green;
+	font-style:italic;
+	font-size:80%;
+}
