@@ -1,4 +1,5 @@
 1.9.2
+* Client/WebUI/Wallet: Show unconfirmed transactions
 * Client/WebUI/MakeTx: pay_cmd inside will not apply changes to the balance folder
 * Client: changed the way freshly mined txs are removed from mempool so it also works for reorgs
 * Client/WebUI/Network: Make some extra information about the nodes switchable on/off
